Added an href link

--- a/index.html
+++ b/index.html
@@ -99,8 +99,13 @@
           </div>
         </div>
       </div>
+      <small>
+        <a href="https://github.com/KhUts0M/forecast-1" target="_blank">
+          Open-source code</a
+        >
+        ", by Khutso Madiba"
+      </small>
     </div>
-
     <script src="src/index.js"></script>
   </body>
 </html>
