removed the 19 and inverted commas on the name

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="clearfix">
               <div class="float-left">
                 <span class="temperature" id="temperature"></span
-                ><span class="units">19°C</span>
+                ><span class="units">°C</span>
               </div>
             </div>
           </div>
@@ -103,7 +103,7 @@
         <a href="https://github.com/KhUts0M/forecast-1" target="_blank">
           Open-source code</a
         >
-        ", by Khutso Madiba"
+        by Khutso Madiba
       </small>
     </div>
     <script src="src/index.js"></script>
